# introduction-data-science

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: idstools_config.yml  logging_config.yml
data/: BikeRentalDaily.csv  BikeRentalDaily_X_validate_processed.pkl  BikeRentalDaily_test_processed.csv  BikeRentalDaily_train_processed.csv  BikeRentalDaily_y_train_processed.pkl  BikeRentalDaily_y_validate_processed.pkl  X_test_task2.pkl  X_train_task2.pkl  X_validate_task2.pkl  meta.xlsx  ohe_processed_data.csv  prepared_test.csv  prepared_test2.csv  prepared_train.csv  prepared_train2.csv  test_data_task2.csv  train_data_task2.csv  validation_data_task2.csv  y_test_task2.pkl  y_train_task2.pkl  y_validate_task2.pkl
docs/: _config.rst  _data_models.rst  _helpers.rst  _objects.rst  _transformer.rst  conf.py  configuration.md  data_explorer.rst  data_preparation.rst  idstools_cli.rst  index.rst  model_optimization.rst  wrapper.rst
models/: LinearRegression.pkl  LinearRegression_features.pkl  final_model.pkl  final_model_features.pkl  final_model_task2.pkl
project/: Introduction-Data-Science-Task-1.ipynb  Introduction-Data-Science-Task-2.ipynb  Introduction-Data-Science-Task-3.ipynb  coefficients.csv  coefficients.pkl  data-exploration.ipynb  data-exploration_test.ipynb  feature_results.csv  helpers.py  model functions.ipynb  model-baseline-and-data-preparation.ipynb  modeling-optimization.ipynb  task_1.ipynb  task_1_idstools.ipynb  task_2.ipynb  task_2_idstools.ipynb  task_3 Neu.ipynb  task_3.ipynb  task_3_Neu.ipynb  task_3_alt.ipynb  task_3_idstools.ipynb
(+35 files in other folders)
